# sanctum

./: .gitignore  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/auth/: login-screen.tsx
components/ui/: resizable.tsx
components/workspace/: settings-dialog.tsx  workspace-layout.tsx
components/workspace/editor/: editor-area.tsx  editor-tabs.tsx  hex-viewer.tsx  image-viewer.tsx  markdown-preview.tsx  monaco-wrapper.tsx
components/workspace/sidebar/: file-tree.tsx
components/workspace/status-bar/: status-bar.tsx
hooks/: use-auto-lock.ts  use-vault.ts
lib/: file-icons.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: biometric.rs  filesystem.rs  mod.rs  vault.rs
src-tauri/src/vault/: crypto.rs  format.rs  mod.rs  serialization.rs  vfs.rs
store/: editor-store.ts  file-tree-store.ts  settings-store.ts  vault-store.ts
