[package]
name = "secret-vault"
version = "0.1.0"
description = "Encrypted vault editor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Serialization (vault format)
rmp-serde = "1"

# Base64 for binary data transfer
base64 = "0.22"

# macOS Keychain + biometric
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
